assets/css/style.scss
---
---

@import "jekyll-theme-slate";

:root {
	--theme-color-base: #3075b1;
	--theme-color-dark: #0f2f46;
	--theme-color-light: #75abcf;
	--theme-color-very-light: #d0e2ee;
	--theme-color-super-light: #e0f1f7;
}

@font-face {
	font-family: "ChangaOne";
	font-style: normal;
	font-weight: 400;
	src: url('../fonts/ChangaOne-Regular.ttf');
}
@font-face {
	font-family: "ChangaOne";
	font-style: italic;
	font-weight: 400;
	src: url('../fonts/ChangaOne-Italic.ttf');
}

@font-face {
	font-family: "OpenSans";
	font-style: normal;
	font-weight: 400;
	src: url('../fonts/OpenSans-Regular.ttf');
}
@font-face {
	font-family: "OpenSans";
	font-style: normal;
	font-weight: 700;
	src: url('../fonts/OpenSans-Bold.ttf');
}
@font-face {
	font-family: "OpenSans";
	font-style: italic;
	font-weight: 400;
	src: url('../fonts/OpenSans-Italic.ttf');
}
@font-face {
	font-family: "OpenSans";
	font-style: italic;
	font-weight: 700;
	src: url('../fonts/OpenSans-BoldItalic.ttf');
}


html, body {
	height: 100%;
	font-family: "OpenSans";
}

.inner { max-width: 800px; }

h1, h2, h3, h4, h5, h6 { font-family: "OpenSans";}


#project_title {
	font-size: 28px;
	text-shadow: var(--theme-color-dark) 0px 0px 10px;
	font-family: "ChangaOne";
	font-style: italic;
	text-transform: uppercase;
	font-weight: 400;
	margin-right: 24px;
}

#project_links { position: absolute; right: 0; top: 11px; display: inline; }

#project_links a { color: #fff; font-size: 20px; padding-left: 16px; }

#header_wrap { background: none; background-color: var(--theme-color-base);}
#header_wrap .inner { padding: 5px; }

#footer_wrap { background: none; background-color: var(--theme-color-base);}
#footer_wrap a { text-decoration: none; font-weight: bold;}
#footer_wrap a:hover { text-decoration: underline; }

#main_content_wrap { background-color: var(--theme-color-super-light); border: none;}

#project_name { font-family: "ChangaOne"; font-style: italic; text-transform: uppercase; font-size: 48px; font-weight: 400; color: var(--theme-color-base) }
#project_description { color: #778; }
#project_description .anchor::before { content: ''}

a { color: var(--theme-color-base); }

#features { clear: both; display: table; }

.feature { width: 20%; padding: 20px; float: left; }
.feature div { text-align: center; }
.feature_icon_box { height: 110px; }
.feature_icon_box:hover { transform: scale(1.05); }
.feature img { width: 100px; border: 0px; vertical-align: bottom; display: table-cell; }

#blogcontainer {
	display: flex;
	justify-content: space-between;
}

.blogbox {
	padding: 20px 20px 75px 20px;
	margin: 10px;
	flex-basis: 800px;
	flex-grow: 1;
	flex-shrink: 1;
	background-color: var(--theme-color-very-light);
	position: relative;
}
.readmore {
	width: 100%;
	text-align: center;
	position: absolute;
	bottom: 0;
	left: 0;
	margin-bottom: 20px;
}
.readmore a {
	display: inline-block;
	width: 180px;
	background-color: var(--theme-color-light);
	padding: 5px;
	color: white;
}
#showolder {
	margin-top: 16px;
	text-align: center;
}
#showolder a {
	display: inline-block;
	width: 250px;
	background-color: var(--theme-color-very-light);
	color: var(--theme-color-dark);
	padding: 5px;
}

.postdate {
	font-style: italic;
	text-align: right;
	position: absolute;
	right: 0
}

.anchor { visibility: hidden ;}
.anchor:hover { color: #C00000; }
.anchor::before { content: '\00A7'; position: absolute; margin-left: -1.5ex; display: block; width: 1.5ex; font-size: 0.85em; padding-top: 0.15em; }
h2:hover .anchor, h3:hover .anchor { visibility: visible; }

:target { -webkit-animation: target-fade 2s; -moz-animation: target-fade 2s; -o-animation: target-fade 2s; animation: target-fade 2s; }

@-webkit-keyframes target-fade {
	from { color: red; }
	to { color: inherit; }
}
@-moz-keyframes target-fade {
	from { color: red; }
	to { color: inherit; }
}
@-o-keyframes target-fade {
	from { color: red; }
	to { color: inherit; }
}
@keyframes target-fade {
	from { color: red; }
	to { color: inherit; }
}

.prewrap { white-space: pre-wrap; }
.hfterminal { color: #060; }
.hfcaption { font-weight: bold; }
.errorlog { color: #600; }
.warnlog { color: #860; }

.annotation[data-value]::after {
	content: attr(data-value);
}

pre code .annotation[data-value]::after {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.annotation {
	background: linear-gradient(0deg, var(--theme-color-base), var(--theme-color-light));
	color: white;
	border-radius: 100px;
	width: 1.5em;
	height: 1.5em;
	display: inline-block;
	text-align: center;
	font-weight: bold;
	font-size: 14px;
	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
}

pre code .annotation {
	position: absolute;
}

ul.annotation-comments {
	list-style: none;
	padding-left: 0;
}

.annotation-comments li {
	margin-top: 10px;
}

